# xstImpalaParquet

./: CMakeLists.txt  README.md  desc-tbl-builder.cc  desc-tbl-builder.h
common/: config.h  logging.cc  status.cc
exec/: exec-node.cc  exec-node.h  hdfs-columnar-scanner.cc  hdfs-scan-node-base.cc  hdfs-scan-node-base.h  hdfs-scan-node-mt.h  hdfs-scan-node.cc  hdfs-scan-node.h  hdfs-scanner.cc  hdfs-scanner.h  scanner-context.h
exec/parquet/: CMakeLists.txt  hdfs-parquet-file-test.cc  hdfs-parquet-scanner.cc  parquet-column-readers.h  parquet-column-stats.h
gen-cpp/: BackendGflags_types.cpp  BackendGflags_types.h  BackendGflags_types.tcc  CatalogObjects_types.cpp  CatalogObjects_types.h  CatalogObjects_types.tcc  CatalogService_types.h  CatalogService_types.tcc  DataSinks_types.h  DataSinks_types.tcc  Data_types.h  Descriptors_types.cpp  Descriptors_types.tcc  ErrorCodes_constants.h  ErrorCodes_types.cpp  ErrorCodes_types.h  ExecStats_types.cpp  ExecStats_types.h  Exprs_types.cpp  Exprs_types.h  Exprs_types.tcc  ExternalDataSource_types.tcc  Frontend_types.cpp  Frontend_types.h  Frontend_types.tcc  ImpalaHiveServer2Service.h  ImpalaHiveServer2Service.tcc  ImpalaInternalService_types.h  ImpalaService_types.cpp  ImpalaService_types.h  ImpalaService_types.tcc  JniCatalog_types.tcc  LineageGraph_types.h  LineageGraph_types.tcc  Logging_types.h  Logging_types.tcc  MetricDefs_constants.cpp  MetricDefs_types.cpp  MetricDefs_types.tcc  Metrics_types.cpp  (+42 more)
generated-sources/gen-cpp/: CatalogObjects_constants.cpp  CatalogObjects_constants.h  CatalogObjects_types.cpp  CatalogObjects_types.h  CatalogObjects_types.tcc  CatalogService_types.cpp  DataSinks_types.cpp  Data_types.cpp  Data_types.tcc  Descriptors_types.h  ErrorCodes_constants.cpp  ErrorCodes_types.cpp  ErrorCodes_types.h  ErrorCodes_types.tcc  ExecStats_types.tcc  Exprs_types.cpp  Exprs_types.h  Exprs_types.tcc  ExternalDataSource_types.cpp  ExternalDataSource_types.h  Frontend_types.cpp  Frontend_types.h  Frontend_types.tcc  ImpalaInternalService_types.cpp  ImpalaInternalService_types.tcc  JniCatalog_types.cpp  JniCatalog_types.h  LineageGraph_types.cpp  MetricDefs_constants.cpp  MetricDefs_constants.h  MetricDefs_types.h  Metrics_types.h  Partitions_types.cpp  PlanNodes_types.cpp  PlanNodes_types.h  PlanNodes_types.tcc  Planner_types.cpp  Query_types.cpp  Query_types.h  Query_types.tcc  (+25 more)
impala-ir/: impala-ir-functions.h
rpc/: rpc-mgr.h
runtime/: descriptors.cc  descriptors.h  exec-env.h  mem-tracker.cc  mem-tracker.h  query-state.cc  query-state.h  row-batch.h  runtime-filter-bank.h  runtime-filter.h  test-env.cc  test-env.h  timestamp-value.inline.h  types.cc
runtime/io/: disk-io-mgr.cc  disk-io-mgr.h  request-ranges.h  scan-range.cc
src/common/: init.cc  logging.cc  status.cc  status.h
src/exec/: exec-node.cc  exec-node.h  filter-context.cc  filter-context.h  hdfs-columnar-scanner.cc  hdfs-columnar-scanner.h  hdfs-scan-node-base.cc  hdfs-scan-node-base.h  hdfs-scan-node.cc  hdfs-scan-node.h  hdfs-scanner.cc  hdfs-scanner.h  scan-node.cc  text-converter.cc  text-converter.h
src/exec/parquet/: hdfs-parquet-scanner.cc  hdfs-parquet-scanner.h  parquet-bloom-filter-util.cc  parquet-bloom-filter-util.h  parquet-column-readers.cc  parquet-column-stats.h
src/exprs/: expr.cc  scalar-expr-evaluator.cc  scalar-expr.cc  scalar-expr.h  scalar-expr.inline.h  timestamp-functions.cc
src/runtime/: descriptors.cc  descriptors.h  exec-env.cc  exec-env.h  fragment-instance-state.cc  fragment-instance-state.h  fragment-state.cc  fragment-state.h  mem-tracker.cc  mem-tracker.h  query-state.cc  query-state.h  row-batch.cc  row-batch.h  runtime-filter-bank.cc  runtime-filter-bank.h  runtime-filter-ir.cc  runtime-filter.cc  runtime-filter.h  runtime-filter.inline.h  runtime-state.cc  runtime-state.h  sorter-internal.h  sorter.cc  sorter.h  test-env.cc  test-env.h  timestamp-value.cc  timestamp-value.inline.h  tmp-file-mgr.cc  tmp-file-mgr.h  tuple.cc  tuple.h  types.cc  types.h
src/runtime/io/: disk-io-mgr.cc  disk-io-mgr.h  request-ranges.h  scan-range.cc
src/testParquet/: hdfs-parquet-file-test.cc
src/testutil/: desc-tbl-builder.cc  desc-tbl-builder.h
src/util/: coding-util.cc  debug-util.cc  error-util.cc  error-util.h  filesystem-util.cc  hdfs-util.cc  histogram-metric.cc  memory-metrics.cc  metrics.cc  metrics.h  network-util.cc  network-util.h  openssl-util.cc  runtime-profile-counters.h  runtime-profile.cc  runtime-profile.h  string-parser.h  thread.cc  thread.h
testParquet/: hdfs-parquet-file-test.cc
util/: bloom-filter.h  debug-util.cc  debug-util.h  histogram-metric.cc  impala-bloom-filter-buffer-allocator.h.bak  mem-info.cc  metrics.h  runtime-profile-counters.h  runtime-profile.cc  runtime-profile.h  string-parser.h
